
2009-05-25  Rupert Germann <rupi@gmx.li>

*** DB table changes ***
	* performance improvement: internal caching of processing intensive values.
	  - archive periods: getting the newscount for every archive period is a quite "expnsive" operation as there can be
	    a lot of these periods. These counts are now cached internally which reduces the rendering time of the archive menu drastically. 
	  - categories: the categories (and also subcategories) for a news article are now stored in the internal cache, too.
	    This reduces the amount of queries which has to be made to display a listview.
	  - internal caching for newscounts in category menus with 2 stages: getting the newscounts for categories is also a very expensive
	    operation especially when the categorymenu is a USER_INT object (which is required for the ajax expand/collapse to work)
	    Now the newscounts are cached seperately for each category and also in an array containing the complete counts for a category menu in a 
	    certain state.
	* SQL query improvements: 
	  - the "Distinct" subselect for the listquery is now only added if it is actually needed (in case when news are selected 
	    by category)
	  - removed the "orderby" part from the count query for lists
	* added indices for tt_news.datetime and tt_news_cat.parent_category
	
	* new extmanager options: 
	  useInternalCaching (as the name says, enabled by default), 
	  cachingMode: this determines the cache entries lifetime and if the internal cache from tt_news will be cleared by TYPO3. 
				"normal": (default) the cache entries will get the same lifetime as normal pages. The tt_news cache will be cleared 
				  when the "clear all caches" button is pressed. 
				"lifetime": will set the livetime of cache entries to the given amount of seconds in field "cacheLifetime". 
				  The cache table is not cleared when "clear all caches" is clicked. 