@@ -16,6 +16,10 @@ cachingMode = normal
   # cat=basic/enable/157; type=int; label=LLL:EXT:tt_news/locallang.xml:extmng.cacheLifetime
 cacheLifetime = 0
 
+  # cat=basic/enable/170; type=options[internal,cachingFramework]; label=LLL:EXT:tt_news/locallang.xml:extmng.cachingEngine
+cachingEngine = internal
+
+
   # cat=basic//15; type=options[title,uid]; label=LLL:EXT:tt_news/locallang.xml:extmng.treeOrderBy
 treeOrderBy = uid
 
